# tracelogs

./: .gitignore  Cargo.toml  README.md
config/: zenbox.yaml
examples/: multiline_tokens.rs
src/: config.rs  lib.rs  main.rs  test.txt
src/logs/: journald.rs  kubectl.rs  lib.rs  mod.rs
src/reader/: files.rs  lib.rs  local_processes.rs  mod.rs
src/tokenizer/: lib.rs  mod.rs  token.rs  tokenizer.rs
test/: Dockerfile  run.py
