[package]
name = "tracelogs"
version = "0.1.0"
authors = ["sebsch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.13"
chrono = { version = "0.4", features = ["serde"] }
termion = "*"
ssh2 = "0.8.1"
tokio = { version = "0.2", features = ["full"] }
openssh = "0.6.2"
regex = "1"
strfmt = "0.1.6"

